--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,78 +1,118 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:elevation="0dp"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context=".MainActivity">
 
-    <EditText
-        android:id="@+id/editText"
+    <TextView
+        android:id="@+id/title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:text="My Nanodegree Apps!" />
+        android:text="@string/app_portfolio_title"
+        android:textAppearance="?android:attr/textAppearanceLarge" />
 
     <Button
         android:id="@+id/button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/editText"
+        android:layout_below="@+id/title"
         android:layout_centerHorizontal="true"
+        android:layout_marginTop="10dp"
+        android:background="@color/udacity_color"
         android:clickable="true"
+        android:elevation="1dp"
         android:minWidth="180dp"
+        android:onClick="buttonClicked"
         android:text="Spotify Streamer" />
 
     <Button
         android:id="@+id/button2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/button"
+        android:layout_alignParentLeft="false"
+        android:layout_alignStart="@+id/button"
         android:layout_below="@+id/button"
         android:layout_centerHorizontal="true"
+        android:layout_marginTop="10dp"
+        android:background="@color/udacity_color"
         android:clickable="true"
+        android:elevation="1dp"
         android:minWidth="180dp"
+        android:onClick="buttonClicked"
         android:text="Scores App" />
 
     <Button
         android:id="@+id/button3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/button2"
-        android:layout_alignStart="@+id/button2"
+        android:layout_alignLeft="@+id/button"
+        android:layout_alignParentLeft="false"
         android:layout_below="@+id/button2"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="10dp"
+        android:background="@color/udacity_color"
         android:clickable="true"
+        android:elevation="1dp"
         android:minWidth="180dp"
+        android:onClick="buttonClicked"
         android:text="Library App" />
 
     <Button
         android:id="@+id/button4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/button"
+        android:layout_alignParentLeft="false"
+        android:layout_alignStart="@+id/button3"
         android:layout_below="@+id/button3"
         android:layout_centerHorizontal="true"
+        android:layout_marginTop="10dp"
+        android:background="@color/udacity_color"
         android:clickable="true"
+        android:elevation="1dp"
         android:minWidth="180dp"
+        android:onClick="buttonClicked"
         android:text="Build It Bigger" />
 
     <Button
         android:id="@+id/button5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/button"
+        android:layout_alignParentLeft="false"
+        android:layout_alignStart="@+id/button6"
         android:layout_below="@+id/button4"
         android:layout_centerHorizontal="true"
+        android:layout_marginTop="10dp"
+        android:background="@color/udacity_color"
         android:clickable="true"
+        android:elevation="1dp"
         android:minWidth="180dp"
+        android:onClick="buttonClicked"
         android:text="XYZ Reader" />
 
     <Button
         android:id="@+id/button6"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/button"
+        android:layout_alignParentLeft="false"
         android:layout_below="@+id/button5"
         android:layout_centerHorizontal="true"
+        android:layout_marginTop="10dp"
+        android:background="#ffff4b64"
         android:clickable="true"
+        android:elevation="1dp"
         android:minWidth="180dp"
-        android:text="Capstone" />
+        android:onClick="buttonClicked"
+        android:text="Capstone"
+        android:textColor="#ffffffff" />
 
 </RelativeLayout>
